Fixed code smells